; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read.c__archive_read_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read.c__archive_read_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive = type { i32 }
%struct.archive_read = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }

@ARCHIVE_OK = common dso_local global i32 0, align 4
@ARCHIVE_READ_MAGIC = common dso_local global i32 0, align 4
@ARCHIVE_STATE_ANY = common dso_local global i32 0, align 4
@ARCHIVE_STATE_FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"archive_read_close\00", align 1
@ARCHIVE_STATE_CLOSED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.archive*)* @_archive_read_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_archive_read_close(%struct.archive* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.archive*, align 8
  %4 = alloca %struct.archive_read*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.archive* %0, %struct.archive** %3, align 8
  %7 = load %struct.archive*, %struct.archive** %3, align 8
  %8 = bitcast %struct.archive* %7 to %struct.archive_read*
  store %struct.archive_read* %8, %struct.archive_read** %4, align 8
  %9 = load i32, i32* @ARCHIVE_OK, align 4
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* @ARCHIVE_OK, align 4
  store i32 %10, i32* %6, align 4
  %11 = load %struct.archive_read*, %struct.archive_read** %4, align 8
  %12 = getelementptr inbounds %struct.archive_read, %struct.archive_read* %11, i32 0, i32 0
  %13 = load i32, i32* @ARCHIVE_READ_MAGIC, align 4
  %14 = load i32, i32* @ARCHIVE_STATE_ANY, align 4
  %15 = load i32, i32* @ARCHIVE_STATE_FATAL, align 4
  %16 = or i32 %14, %15
  %17 = call i32 @archive_check_magic(%struct.TYPE_3__* %12, i32 %13, i32 %16, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %18 = load %struct.archive_read*, %struct.archive_read** %4, align 8
  %19 = getelementptr inbounds %struct.archive_read, %struct.archive_read* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @ARCHIVE_STATE_CLOSED, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %1
  %25 = load i32, i32* @ARCHIVE_OK, align 4
  store i32 %25, i32* %2, align 4
  br label %43

26:                                               ; preds = %1
  %27 = load %struct.archive_read*, %struct.archive_read** %4, align 8
  %28 = getelementptr inbounds %struct.archive_read, %struct.archive_read* %27, i32 0, i32 0
  %29 = call i32 @archive_clear_error(%struct.TYPE_3__* %28)
  %30 = load i64, i64* @ARCHIVE_STATE_CLOSED, align 8
  %31 = load %struct.archive_read*, %struct.archive_read** %4, align 8
  %32 = getelementptr inbounds %struct.archive_read, %struct.archive_read* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  store i64 %30, i64* %33, align 8
  %34 = load %struct.archive_read*, %struct.archive_read** %4, align 8
  %35 = call i32 @close_filters(%struct.archive_read* %34)
  store i32 %35, i32* %6, align 4
  %36 = load i32, i32* %6, align 4
  %37 = load i32, i32* %5, align 4
  %38 = icmp slt i32 %36, %37
  br i1 %38, label %39, label %41

39:                                               ; preds = %26
  %40 = load i32, i32* %6, align 4
  store i32 %40, i32* %5, align 4
  br label %41

41:                                               ; preds = %39, %26
  %42 = load i32, i32* %5, align 4
  store i32 %42, i32* %2, align 4
  br label %43

43:                                               ; preds = %41, %24
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i32 @archive_check_magic(%struct.TYPE_3__*, i32, i32, i8*) #1

declare dso_local i32 @archive_clear_error(%struct.TYPE_3__*) #1

declare dso_local i32 @close_filters(%struct.archive_read*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
